--- a/src/main/resources/templates/admin/movie-add.html
+++ b/src/main/resources/templates/admin/movie-add.html
@@ -17,7 +17,7 @@
                             <h1>THEM PHIM MOI</h1>
                         </div>
                         <form th:action="@{/admin/movies/add}"
-                              th:object="${movieRequest}"
+                              th:object="${movie}"
                               method="post"
                               enctype="multipart/form-data">
                             <div class="mb-3">
@@ -33,54 +33,98 @@
                                 <input type="number" id="duration" th:field="*{duration}" class="form-control">
                             </div>
                             <div class="mb-3">
-                                <label for="releaseYear" class="form-label">Nam phat hanh</label>
-                                <select id="releaseYear" class="form-control" th:field="*{releaseYear}" >
-                                    <option th:each="item : ${lstRelease}"
-                                            th:value="${item.id}"
-                                            th:text="${item.year}">
+                                <label  class="form-label">Nam phat hanh</label>
+                                <select id="releaseYear" class="form-control" th:field="*{yearRelease}" >
+                                    <option th:each="item : ${#numbers.sequence(1990, 2021)}"
+                                            th:value="${item.valueOf(item)}"
+                                            th:text="${item.valueOf(item)}">
                                     </option>
 
                                 </select>
                             </div>
                             <div class="mb-3">
-                                <label for="title" class="form-label">Chon anh</label>
-                                <input type="file" id="image" th:field="*{image}" class="form-control">
+
+                                <div>
+                                    <label>Main Image: [[${movie.mainImage}]]</label>
+
+                                    <div>
+                                        <input type="file" id="fileImage" name="fileImage"
+                                               accept="image/png, image/jpeg">
+                                    </div>
+                                    <input type="hidden" th:field="*{mainImage}">
+                                </div>
                             </div>
-                            <div class="mb-3">
-                                <label for="videoTrailer" class="form-label">Chon video trailer</label>
-                                <input type="text" id="videoTrailer" th:field="*{videoTrailer}" class="form-control">
+
+
+                                <div class="mb-3">
+                                    <label>Chon Trailer video: [[${movie.trailerVideo}]]</label>
+                                    <div>
+                                        <input type="file" name="fileVideo"
+                                               accept="image/png, image/jpeg">
+                                    </div>
+                                    <input type="hidden" th:field="*{mainImage}">
+                                </div>
+
+                            <div>
+
+                                <div>
+                                    <label>Chon video movie: </label>
+                                    <div th:id="'extraImageHeader' + 0">
+                                        <label>Video #1</label></div>
+                                    <div class="m-2">
+
+                                    </div>
+                                    <div>
+                                        <input type="file" name="movieVideo"
+                                               class="mb-2">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="mb-3">
-                                <label for="videoMovie" class="form-label">Chon video movie</label>
-                                <input type="file" id="videoMovie" th:field="*{videoMovie}" class="form-control">
-                            </div>
+
                             <div class="mb-3">
                                 <label for="cast" class="form-label">Ten dien vien</label>
                                 <input type="text" id="cast"
                                        class="form-control"
-                                       th:field="*{cast}"
                                        placeholder="Yeu cau cac ten dien vien cach nhau bang dau phay">
                             </div>
                             <div class="mb-3">
-                                <label for="director" class="form-label">Ten dao dien</label>
-                                <input type="text" id="director"
-                                       th:field="*{director}"
-                                       class="form-control"
-                                       placeholder="Yeu cau cac ten dao dien cach nhau bang dau phay">
+                                <label  class="form-label">Ten dao dien</label>
+                                <select required="required" multiple style="resize: vertical; height: 100px" class="form-control"
+                                        th:field="*{directors}">
+                                    <th:block th:each="cat: ${lstDirector}">
+                                        <option th:value="${cat.id}" >[[${cat.name}]]</option>
+                                    </th:block>
+                                </select>
+
                             </div>
                             <div class="mb-3">
-                                <label for="genre" class="form-label">The loai</label>
-                                <input type="text" id="genre"
-                                       th:field="*{genre}"
-                                       class="form-control"
-                                       placeholder="Yeu cau cac the loai cach nhau bang dau phay">
+                                <label class="form-label">The loai</label>
+                                <select required="required" multiple style="resize: vertical; height: 100px" class="form-control"
+                                        th:field="*{genres}">
+                                    <th:block th:each="cat: ${lstGenre}">
+                                        <option th:value="${cat.id}" >[[${cat.name}]]</option>
+                                    </th:block>
+                                </select>
+
+
                             </div>
+                            <div class="form-group row">
+                                <label class="col-sm-4 col-form-label">Chosen genres</label>
+<!--                                <div class="col-sm-8">-->
+<!--                                    <div id="chosenGenres"></div>-->
+<!--                                </div>-->
+                            </div>
+                            <div id="chosenGenres"></div>
                             <div class="mb-3">
-                                <label for="country" class="form-label">Quoc gia</label>
-                                <input type="text" id="country"
-                                       th:field="*{country}"
-                                       class="form-control"
-                                       placeholder="Yeu cau cac quoc gia cach nhau bang dau phay">
+                                <label class="form-label">Quoc gia</label>
+                                <select required="required" multiple style="resize: vertical; height: 100px" class="form-control"
+                                        th:field="*{countries}">
+                                    <th:block th:each="cat: ${lstCountry}">
+                                        <option th:value="${cat.id}" >[[${cat.name}]]</option>
+                                    </th:block>
+                                </select>
+
+
                             </div>
                             <div class="mb-3">
                                 <label for="description" class="form-label">Tom tat noi dung phim</label>
@@ -97,3 +141,30 @@
         </main>
     </div>
 </div>
+<script type="text/javascript">
+
+    $(document).ready(function(){
+        alert("nhan");
+        dropdownGenres = $("#genres");
+        divChosenGenres = $("#chosenGenres");
+
+        dropdownGenres.change(function(){
+            divChosenGenres.empty();
+            showChosenGenres();
+        });
+        showChosenGenres();
+    });
+
+    function showChosenGenres(){
+        dropdownGenres.children("option:selected").each(function(){
+            selectedGenres = $(this);
+            alert(selectedGenres.text());
+            genResId = selectedGenres.val();
+            genresName = selectedGenres.text();
+
+            divChosenGenres.append("<span >" + genresName + "</span>")
+        })
+    }
+
+</script>
+</body>
