asfd Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/static/web/css/single.css
+++ b/src/main/resources/static/web/css/single.css
@@ -2,13 +2,7 @@ header{
     position: relative;
     background-color: black;
 }
-.videocontainer{
-    max-width: 1280px;
-    margin: auto !important;
-}
-video{
-    object-fit: fill;
-}
+
 
 .movieinformation{
     max-width: 800px;
@@ -35,7 +29,7 @@ video{
 }
 
 .actions{
-    margin-top: 40px;
+    margin-top: 1.5rem;
 }
 .actions i{
     font-size: 30px;
